# opacity

./: .cruft.json  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst
opacity/: __init__.py  dataset.py  filesystem.py  metadata.py  resolve_species.py
opacity/data/: metadata_descriptions.json
opacity/tests/: test_dataset.py  test_filesystem.py  test_resolve.py
