[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "opacity"
description = "Atomic and molecular opacities from MAESTRO"
requires-python = ">=3.11"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE" }
authors = [
  { name = "Brett Morris", email = "morrisbrettm@gmail.com" },
]
dependencies = [
  "astropy",
  "fsspec",
  "s3fs",
  "xarray",
  "zarr",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
    "pytest-remotedata",
    "flake8"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx-book-theme>=0.3.3",
    "numpydoc",
    "matplotlib",
]
[project.urls]
repository = "https://github.com/opacities/opacity"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["opacity*"]

[tool.setuptools_scm]
version_file = "opacity/version.py"

[tool.pytest.ini_options]
testpaths = [
  "opacity",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["opacity[\\/]_dev"]

[tool.coverage.run]
omit = [
 "opacity/__init*",
 "opacity/conftest.py",
 "opacity/*setup_package*",
 "opacity/tests/*",
 "opacity/*/tests/*",
 "opacity/extern/*",
 "opacity/version*",
 "*/opacity/__init*",
 "*/opacity/conftest.py",
 "*/opacity/*setup_package*",
 "*/opacity/tests/*",
 "*/opacity/*/tests/*",
 "*/opacity/extern/*",
 "*/opacity/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
